# webrtcLib

./: README.md
webrtcmodule/: CMakeLists.txt  build.gradle
webrtcmodule/src/androidTest/java/com/gwecom/webrtcmodule/: ExampleInstrumentedTest.java
webrtcmodule/src/main/: AndroidManifest.xml
webrtcmodule/src/main/java/com/gwecom/webrtcmodule/: IWebRtcModuleCallBack.java  WebrtcLogMessage.java  WebrtcModule.java
webrtcmodule/src/main/java/com/gwecom/webrtcmodule/NativeClient/: IWebRtcClientCallBack.java  WebrtcModule.java
webrtcmodule/src/main/java/com/gwecom/webrtcmodule/PermissionUtils/: PermissionHelper.java  PermissionUtil.java
webrtcmodule/src/main/java/com/gwecom/webrtcmodule/PermissionUtils/bean/: Permission.java  PermissionModel.java
webrtcmodule/src/main/java/com/gwecom/webrtcmodule/PermissionUtils/callback/: PermissionCallback.java  PermissionDetailCallback.java
webrtcmodule/src/main/java/com/gwecom/webrtcmodule/WebRtcClient/: OriginalAudioSourceImpl.java  VideoDecoderFactoryImpl.java  VideoDecoderImpl.java  WebRtcClient.java
webrtcmodule/src/main/java/com/gwecom/webrtcmodule/WebrtcModuleDef/: VappInstanceData.java
webrtcmodule/src/main/jni/: LogUtil.h  WebrtcClient.cpp  WebrtcClient.h  WebrtcDef.cpp  WebrtcDef.h  baseinstanceabstract.h  cJSON.cpp  cJSON.h  httpmodelsrest.cpp  httpmodelsrest.h  jniHelper.cpp  jniHelper.h  mobilenetworkconfig.cpp  mobilenetworkconfig.h  signalingsession.cpp  signalingsession.h  webrtcmodule.cpp  webrtcmodule.h
webrtcmodule/src/main/jni/depends/boost/asio/detail/: config.hpp
webrtcmodule/src/main/jni/depends/boost/system/: error_code.hpp
webrtcmodule/src/main/jni/depends/websockets/include/: lws_config.h
webrtcmodule/src/main/jni/depends/websockets/libs/debug/: websockets_static.lib
webrtcmodule/src/main/jni/depends/websockets/libs/release/: websockets.lib  websockets_static.lib
webrtcmodule/src/main/jni/janus/: CWebSocket.cpp  CWebSocket.h  ServerSslCaPem.h  timer.cpp  timer.h
webrtcmodule/src/main/res/values/: strings.xml
webrtcmodule/src/test/java/com/gwecom/webrtcmodule/: ExampleUnitTest.java
